--- a/index.html
+++ b/index.html
@@ -189,6 +189,22 @@
               </p>
           </article>
       </section>
+      <section class="cover">
+        <a href="#" class="cover__background" target="_blank">
+          <h3 class="cover__title">До Байкала «на собаках»</h3>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
+      </section>
     </main>
+    <footer class="footer">
+      <ul class="footer__links">
+        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+      </ul>
+      <p class="footer__author">© 2022. Максименко Михаил</p>
+    </footer>
   </div>
 </body>
