--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</p>
         <img src="./images/kalegin-michail-179870-unsplash.png" alt="Изображение плацкарта" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
@@ -58,37 +58,37 @@
           <img src="./images/photo-grid-train.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото высот Кавказа" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-tuman.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-tuman.jpg" alt="Фото собаки на рулоне сена" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-sochi.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-sochi.jpg" alt="Фото леса в тумане" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-arisa.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-arisa.jpg" alt="Фото машины на льду" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-baikal.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal.jpg" alt="Фото Байкала" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-elbrus.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-elbrus.jpg" alt="Фото горы Эльбрус" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-kondratiev.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-kondratiev.jpg" alt="Фото волнорезов" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки 1" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото Камчатки 2" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-baikal-2.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal-2.jpg" alt="Фото Байкала" class="photo-grid__item">
         </div>
         <div class="photo-grid__item">
-          <img src="./images/photo-grid-ergaki.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-ergaki.jpg" alt="Фото с высоты на Ергаки" class="photo-grid__item">
         </div>
       </section>
       <section class="places">
@@ -96,9 +96,9 @@
           <h3 class="places__place__title">Куршская коса</h3>
           <div class="places__place__website">
             <p class="places__place__website__url-heading">URL</p>
-            <a class="places__place__website__link" href="#">park-kosa.ru</a>
+            <a class="places__place__website__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
-          <img class="places__place__image" src="./images/place-kosa.jpg">
+          <img class="places__place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div>
             <p class="places__place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского 
@@ -117,9 +117,9 @@
             <h3 class="places__place__title">Кольский</h3>
             <div class="places__place__website">
               <p class="places__place__website__url-heading">URL</p>
-              <a class="places__place__website__link" href="#">National Geographic</a>
+              <a class="places__place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
-            <img class="places__place__image" src="./images/place-kolsky.jpg">
+            <img class="places__place__image" src="./images/place-kolsky.jpg" alt="Кольский">
             <div>
               <p class="places__place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -138,9 +138,9 @@
             <h3 class="places__place__title">Алтай</h3>
             <div class="places__place__website">
               <p class="places__place__website__url-heading">URL</p>
-              <a class="places__place__website__link" href="#">Facebook</a>
+              <a class="places__place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
-            <img class="places__place__image" src="./images/place-altai.jpg">
+            <img class="places__place__image" src="./images/place-altai.jpg" alt="Алтай">
             <div>
               <p class="places__place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
@@ -158,9 +158,9 @@
             <h3 class="places__place__title">Зимний Байкал</h3>
             <div class="places__place__website">
               <p class="places__place__website__url-heading">URL</p>
-              <a class="places__place__website__link" href="#">https://vk.com/baikalmile</a>
+              <a class="places__place__website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
-            <img class="places__place__image" src="./images/place-winter-baikal.jpg">
+            <img class="places__place__image" src="./images/place-winter-baikal.jpg" alt="Байкал">
             <div>
               <p class="places__place__paragraph">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый 
@@ -177,9 +177,9 @@
             <h3 class="places__place__title">Карелия</h3>
             <div class="places__place__website">
               <p class="places__place__website__url-heading">URL</p>
-              <a class="places__place__website__link" href="#">http://vodlozero.ru/</a>
+              <a class="places__place__website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
-            <img class="places__place__image" src="./images/place-karelia.jpg">
+            <img class="places__place__image" src="./images/place-karelia.jpg" alt="Карелия">
               <p class="places__place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
                 Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. 
@@ -190,9 +190,9 @@
           </article>
       </section>
       <section class="cover">
-        <a href="#" class="cover__background" target="_blank">
-          <h3 class="cover__title">До Байкала «на собаках»</h3>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
+          <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе&nbsp;— путешествие от столицы&nbsp;до Байкала на электричках.</p>
         </a>
       </section>
     </main>
