--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Russia, Travel">
   <meta name="author" content="Максименко Михаил">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Научиться учиться</title>
+  <title>Путешествие по России</title>
 </head>
 <body>
   <div class="page">
