--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
       <img src="./images/russia-travel_logo.svg" alt="Лого Путешествие по России" class="header__logo">
       <div class="header__links">
-        <href class="header__link header__link_active">Ru</href>
-        <href class="header__link">En</href>
+        <a href="#" class="header__link header__link_active">Ru</a>
+        <a href="#" class="header__link">En</a>
       </div>
     </header>
     <main class="content">
