--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
+      <nav class="footer__links">
         <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
         <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
         <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
         <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
         <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-      </ul>
+      </nav>
       <p class="footer__author">© 2022. Максименко Михаил</p>
     </footer>
   </div>
