--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         </p>
         <ul class="intro__list intro__list_auto-fit">
           <li>
-            <span class="intro__list_item">Часовых поясов</span> 11
+            <span class="intro__list-item">Часовых поясов</span> 11
           </li>
           <li>
-            <span class="intro__list_item">Объектов природного наследия ЮНЕСКО</span> 12
+            <span class="intro__list-item">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li>
-            <span class="intro__list_item">Объектов культурного наследия ЮНЕСКО</span> 16
+            <span class="intro__list-item">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li>
-            <span class="intro__list_item">Природных заповедников</span> 105
+            <span class="intro__list-item">Природных заповедников</span> 105
           </li>
           <li>
-            <span class="intro__list_item">Аэропортов</span> 241
+            <span class="intro__list-item">Аэропортов</span> 241
           </li>
         </ul>
       </section>
