--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <article class="place">
           <h3 class="place__title">Куршская коса</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div>
@@ -116,8 +116,8 @@
         <article class="place">
             <h3 class="place__title">Кольский</h3>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
             <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
             <div>
@@ -137,8 +137,8 @@
           <article class="place">
             <h3 class="place__title">Алтай</h3>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
             <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
             <div>
@@ -157,8 +157,8 @@
           <article class="place">
             <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
             <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Байкал">
             <div>
@@ -176,8 +176,8 @@
           <article class="place">
             <h3 class="place__title">Карелия</h3>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
             <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
               <p class="place__paragraph">
