--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
           <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе&nbsp;— путешествие от столицы&nbsp;до Байкала на электричках.</p>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы&nbsp;до Байкала на электричках.</p>
         </a>
       </section>
     </main>
