--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</p>
-        <img src="./images/kalegin-michail-179870-unsplash.png" alt="Изображение плацкарта" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__image-container">
+          <img src="./images/kalegin-michail-179870-unsplash.png" alt="Изображение плацкарта" class="lead__image">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -35,65 +37,41 @@
           их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, 
           достойные вашего отпуска.
         </p>
-        <ul class="intro__list intro__list_auto-fit">
+        <ul class="intro__list">
           <li>
-            <span class="intro__list-item">Часовых поясов</span> 11
+            <span class="intro__list_span-accent">Часовых поясов</span> 11
           </li>
           <li>
-            <span class="intro__list-item">Объектов природного наследия ЮНЕСКО</span> 12
+            <span class="intro__list_span-accent">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li>
-            <span class="intro__list-item">Объектов культурного наследия ЮНЕСКО</span> 16
+            <span class="intro__list_span-accent">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li>
-            <span class="intro__list-item">Природных заповедников</span> 105
+            <span class="intro__list_span-accent">Природных заповедников</span> 105
           </li>
           <li>
-            <span class="intro__list-item">Аэропортов</span> 241
+            <span class="intro__list_span-accent">Аэропортов</span> 241
           </li>
         </ul>
       </section>
-      <section class="photo-grid photo-grid_auto-fit">
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-train.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото высот Кавказа" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-tuman.jpg" alt="Фото собаки на рулоне сена" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-sochi.jpg" alt="Фото леса в тумане" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-arisa.jpg" alt="Фото машины на льду" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-baikal.jpg" alt="Фото Байкала" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-elbrus.jpg" alt="Фото горы Эльбрус" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-kondratiev.jpg" alt="Фото волнорезов" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки 1" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото Камчатки 2" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-baikal-2.jpg" alt="Фото Байкала" class="photo-grid__item">
-        </div>
-        <div class="photo-grid__item">
-          <img src="./images/photo-grid-ergaki.jpg" alt="Фото с высоты на Ергаки" class="photo-grid__item">
-        </div>
+      <section class="photo-grid">
+        <img src="./images/photo-grid-train.jpg" alt="Фото из вагона поезда" class="photo-grid__item">
+        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото высот Кавказа" class="photo-grid__item">
+        <img src="./images/photo-grid-tuman.jpg" alt="Фото собаки на рулоне сена" class="photo-grid__item">
+        <img src="./images/photo-grid-sochi.jpg" alt="Фото леса в тумане" class="photo-grid__item">
+        <img src="./images/photo-grid-arisa.jpg" alt="Фото машины на льду" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal.jpg" alt="Фото Байкала" class="photo-grid__item">
+        <img src="./images/photo-grid-elbrus.jpg" alt="Фото горы Эльбрус" class="photo-grid__item">
+        <img src="./images/photo-grid-kondratiev.jpg" alt="Фото волнорезов" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки 1" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото Камчатки 2" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="Фото Байкала" class="photo-grid__item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="Фото с высоты на Ергаки" class="photo-grid__item">
       </section>
       <section class="places">
         <article class="place">
-          <h3 class="place__title">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -114,7 +92,7 @@
           </div>
         </article>
         <article class="place">
-            <h3 class="place__title">Кольский</h3>
+            <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -135,7 +113,7 @@
             </div>
           </article>
           <article class="place">
-            <h3 class="place__title">Алтай</h3>
+            <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
@@ -155,7 +133,7 @@
             </div>
           </article>
           <article class="place">
-            <h3 class="place__title">Зимний Байкал</h3>
+            <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -174,7 +152,7 @@
             </div>
           </article>
           <article class="place">
-            <h3 class="place__title">Карелия</h3>
+            <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -191,7 +169,7 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
-          <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
+          <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы&nbsp;до Байкала на электричках.</p>
         </a>
       </section>
