--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         </p>
         <ul class="intro__list">
           <li>
-            <span class="intro__list_span-accent">Часовых поясов</span> 11
+            <span class="intro__span-accent">Часовых поясов</span> 11
           </li>
           <li>
-            <span class="intro__list_span-accent">Объектов природного наследия ЮНЕСКО</span> 12
+            <span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li>
-            <span class="intro__list_span-accent">Объектов культурного наследия ЮНЕСКО</span> 16
+            <span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li>
-            <span class="intro__list_span-accent">Природных заповедников</span> 105
+            <span class="intro__span-accent">Природных заповедников</span> 105
           </li>
           <li>
-            <span class="intro__list_span-accent">Аэропортов</span> 241
+            <span class="intro__span-accent">Аэропортов</span> 241
           </li>
         </ul>
       </section>
